--- a/docs/content/preview/releases/release-notes/v2.14.md
+++ b/docs/content/preview/releases/release-notes/v2.14.md
@@ -17,27 +17,27 @@ Included here are the release notes for the v2.14 release series. Content will b
 
 For an RSS feed of all release series, point your feed reader to the [RSS feed for releases](../../index.xml).
 
-## v2.14.9.0 - April 25, 2023 {#v2.14.9.0}
+## v2.14.9.0 - April 28, 2023 {#v2.14.9.0}
 
-**Build:** `2.14.9.0-b15`
+**Build:** `2.14.9.0-b23`
 
-**Third-party licenses:** [YugabyteDB](https://downloads.yugabyte.com/releases/2.14.9.0/yugabytedb-2.14.9.0-b15-third-party-licenses.html), [YugabyteDB Anywhere](https://downloads.yugabyte.com/releases/2.14.9.0/yugabytedb-anywhere-2.14.9.0-b15-third-party-licenses.html)
+**Third-party licenses:** [YugabyteDB](https://downloads.yugabyte.com/releases/2.14.9.0/yugabytedb-2.14.9.0-b23-third-party-licenses.html), [YugabyteDB Anywhere](https://downloads.yugabyte.com/releases/2.14.9.0/yugabytedb-anywhere-2.14.9.0-b23-third-party-licenses.html)
 
 ### Downloads
 
 <ul class="nav yb-pills">
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b15-darwin-x86_64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b23-darwin-x86_64.tar.gz">
         <i class="fa-brands fa-apple"></i><span>macOS</span>
     </a>
   </li>
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b15-linux-x86_64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b23-linux-x86_64.tar.gz">
         <i class="fa-brands fa-linux"></i><span>Linux x86</span>
     </a>
   </li>
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b15-el8-aarch64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b23-el8-aarch64.tar.gz">
         <i class="fa-brands fa-linux"></i><span>Linux ARM</span>
     </a>
   </li>
@@ -46,7 +46,7 @@ For an RSS feed of all release series, point your feed reader to the [RSS feed f
 ### Docker
 
 ```sh
-docker pull yugabytedb/yugabyte:2.14.9.0-b15
+docker pull yugabytedb/yugabyte:2.14.9.0-b23
 ```
 
 ### Improvements
@@ -79,9 +79,16 @@ docker pull yugabytedb/yugabyte:2.14.9.0-b15
 
 * [[15090](https://github.com/yugabyte/yugabyte-db/issues/15090)] [DocDB] Tablet splitting: Some queries fail with "The tablet is shutting down" during the workload
 * [[15220](https://github.com/yugabyte/yugabyte-db/issues/15220)] [[15786](https://github.com/yugabyte/yugabyte-db/issues/15786)] [[15947](https://github.com/yugabyte/yugabyte-db/issues/15947)] [DocDB] Fix apply-operation timeout during schema changes
+* [[15746](https://github.com/yugabyte/yugabyte-db/issues/16789)] [DocDB] harden master leaderless tablet endpoint
 * [[16444](https://github.com/yugabyte/yugabyte-db/issues/16444)] [DocDB] Ignore heartbeats from peers not in reported config
 * [[16789](https://github.com/yugabyte/yugabyte-db/issues/16789)] [YSQL] Assume that CAPABILITY_PickReadTimeAtTabletServer is enabled all the time
 * Re-used master nodes are not reinitialized, leading to under-replication
+
+#### YugabyteDB Anywhere
+
+* [PLAT-7269] Added a retry for ModifyMasterClusterConfig on config version mismatch
+* [PLAT-8516] Backups not getting cleared after retention is complete
+* [PLAT-8570] Don't provide table name list to yb_backup during YCQL restore
 
 ## v2.14.8.0 - April 4, 2023 {#v2.14.8.0}
 
