--- a/docs/content/preview/releases/release-notes/v2.14.md
+++ b/docs/content/preview/releases/release-notes/v2.14.md
@@ -90,6 +90,10 @@ docker pull yugabytedb/yugabyte:2.14.9.0-b23
 * [PLAT-8516] Backups not getting cleared after retention is complete
 * [PLAT-8570] Don't provide table name list to yb_backup during YCQL restore
 
+### Known issues
+
+* N/A
+
 ## v2.14.8.0 - April 4, 2023 {#v2.14.8.0}
 
 **Build:** `2.14.8.0-b17`
@@ -159,6 +163,10 @@ docker pull yugabytedb/yugabyte:2.14.8.0-b17
 * [[15528](https://github.com/yugabyte/yugabyte-db/issues/15528)] [DocDB] Fix usage of Connection::outbound_data_being_processed_ during Shutdown
 * [[16138](https://github.com/yugabyte/yugabyte-db/issues/16138)] [DocDB] Tablet splitting should be blocked on system_postgres.sequences_data
 * [[16457](https://github.com/yugabyte/yugabyte-db/issues/16457)] [YSQL] Fix segmentation fault after rollback of subtransaction with deferred
+
+### Known issues
+
+* N/A
 
 ## v2.14.7.0 - March 10, 2023 {#v2.14.7.0}
 
