added till build 152

--- a/docs/content/preview/releases/release-notes/v2.17.md
+++ b/docs/content/preview/releases/release-notes/v2.17.md
@@ -25,27 +25,27 @@ Included here are the release notes for the YugabyteDB v2.17 release series. Con
 
 For an RSS feed of all release series, point your feed reader to the [RSS feed for releases](../../index.xml).
 
-## v2.17.3.0 - April 12, 2023 {#v2.17.3.0}
+## v2.17.3.0 - May 04, 2023 {#v2.17.3.0}
 
-**Build:** `2.17.3.0-b142`
+**Build:** `2.17.3.0-b152`
 
 ### Downloads
 
 <ul class="nav yb-pills">
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.17.3.0/yugabyte-2.17.3.0-b142-darwin-x86_64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.17.3.0/yugabyte-2.17.3.0-b152-darwin-x86_64.tar.gz">
       <i class="fa-brands fa-apple"></i>
       <span>macOS</span>
     </a>
   </li>
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.17.3.0/yugabyte-2.17.3.0-b142-linux-x86_64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.17.3.0/yugabyte-2.17.3.0-b152-linux-x86_64.tar.gz">
       <i class="fa-brands fa-linux"></i>
       <span>Linux x86</span>
     </a>
   </li>
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.17.3.0/yugabyte-2.17.3.0-b142-el8-aarch64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.17.3.0/yugabyte-2.17.3.0-b152-el8-aarch64.tar.gz">
       <i class="fa-brands fa-linux"></i>
       <span>Linux ARM</span>
     </a>
@@ -55,7 +55,7 @@ For an RSS feed of all release series, point your feed reader to the [RSS feed f
 ### Docker
 
 ```sh
-docker pull yugabytedb/yugabyte:2.17.3.0-b142
+docker pull yugabytedb/yugabyte:2.17.3.0-b152
 ```
 
 ### New Features
@@ -178,6 +178,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [[16541](https://github.com/yugabyte/yugabyte-db/issues/16541)] [yugabyted] Show EAR in status if enabled even when --secure flag is false.
 * [[16545](https://github.com/yugabyte/yugabyte-db/issues/16545)] Build build/package on mac11
 * [[16552](https://github.com/yugabyte/yugabyte-db/issues/16552)] [YSQL] Prevent prefix_length_ from taking non-key columns into account
+* [[16617](https://github.com/yugabyte/yugabyte-db/issues/16617)] [DB-6011] [YCQLSH] Updating yugabyte-db-thirdparty release version
 * [[16746](https://github.com/yugabyte/yugabyte-db/issues/16746)] xCluster: Compute and propagate apply_safe_time from producer
 * [CLOUD-11878] Allow editing of used provider for YBM
 * [CLOUDGA-12309] Populate providerCode in regions/az even when config is null
@@ -193,6 +194,8 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 
 ### Bug fixes
 
+* [[16773](https://github.com/yugabyte/yugabyte-db/issues/16773)] [xCluster] Fix TSAN race on StreamTabletMetadata
+* [[16583](https://github.com/yugabyte/yugabyte-db/issues/16583)] [YSQL] Fix IndexOnlyScan with no targets returning empty rows
 * [[12417](https://github.com/yugabyte/yugabyte-db/issues/12417)] [YSQL] Fix invalid assertion in per-database catalog version mode
 * [[12884](https://github.com/yugabyte/yugabyte-db/issues/12884)] [[15938](https://github.com/yugabyte/yugabyte-db/issues/15938)] [YSQL] Fix TSAN issues caused by quickdie()
 * [[14239](https://github.com/yugabyte/yugabyte-db/issues/14239)] [YSQL] Handle duplicate YSQL CREATE TABLEs on master using tables_
