--- a/docs/content/preview/releases/yba-releases/v2.17.md
+++ b/docs/content/preview/releases/yba-releases/v2.17.md
@@ -26,12 +26,12 @@ For an RSS feed of all release series, point your feed reader to the [RSS feed f
 
 ## v2.17.3.0 - April 12, 2023 {#v2.17.3.0}
 
-**Build:** `2.17.3.0-b142`
+**Build:** `2.17.3.0-b152`
 
 ### Docker
 
 ```sh
-docker pull yugabytedb/yugabyte:2.17.3.0-b142
+docker pull yugabytedb/yugabyte:2.17.3.0-b152
 ```
 
 ### New Features
@@ -58,6 +58,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-7004] Adding backend support for provider architecture
 * [PLAT-7019] UI support core count, mem properties for k8s univs on create and edit page
 * [PLAT-7061] Copy YBC package, gflags to the PV during universe creation.
+* [PLAT-7121] HA implementation for YBA-installer
 * [PLAT-7123] Added restart logging
 * [PLAT-7136] Add systemd configuration support to manual provisioning script
 * [PLAT-7231] Inherit user tags value from primary cluster to read replica
@@ -81,6 +82,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-7617] [PLAT-7616] Add runtime config for enabling attach/detach feature. Enable locking after detaching
 * [PLAT-7675] Use enable_nestloop off to improve slow queries performance
 * [PLAT-7684] [PLAT-7635] [PLAT-7683] Add support for editing unused AZU, GCP and AWS providers
+* [PLAT-7685] [PLAT-7694] [PLAT-8248] Add support for editing unused kubernetes providers
 * [PLAT-7686] Add support for editing unused OnPrem providers
 * [PLAT-7699] Add region code while creating sts and route53 client
 * [PLAT-7711] Poll delete provider task for completion
@@ -216,6 +218,16 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-8048] Avoid GCP cred validation as part of service account creation
 * [PLAT-8168] Certificates from Hashicorp Vault should only have one level wildcard
 * [PLAT-8196] Persist skipProvisioning value if specified for onprem nodes
+* [PLAT-8213] Fetch platformVersion from metadata file
+* [PLAT-8237] Enabling YBC on read replica of k8s
+* [PLAT-8246] [PLAT-8243] Improve Incremental backup resource consumption. Enable verbose logs by default on YBC.
+* [PLAT-8260] Make changes in node-agent to run any procedural task to support preflight check and future task
+* [PLAT-8317] Compare the entire cloudInfo as part of edit instead of env vars
+* [PLAT-8336] Bump up the YBC version on Platform
+* [PLAT-8354] Enable the runtime config to true for dedicated master
+* [PLAT-8369] Software upgrade on a ybc universe causing controller container to get removed
+* [PLAT-8543] [UI][YBC] Use throttle values( min/max/default/current ) from backend to populate throttle params GUI
+* [PLAT-8546] YBC version upgrade to 1.0.0-b26
 * [PLAT] Use the previous name for x86_64 checksum
 * Combined change for [PLAT-7770] and Service Account being non default in UI
 
@@ -273,6 +285,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-7740] Fix resume, pause and VM upgrade tasks on universe for node-agent
 * [PLAT-7742] Fix backup and restore on auth-enabled k8s universes
 * [PLAT-7757] Fix default of http_enabled
+* [PLAT-7765] [PLAT-8234] [PLAT-8235]Universe creation fails with YBC if a zone is in a different K8s cluster. Fix master gflag upgrade. Restart ybc in the case of a crash.
 * [PLAT-7766] [PLAT-7828] UI revamp fixes
 * [PLAT-7784] Fix NPE in PlacementInfoUtil when instanceType is null
 * [PLAT-7895] XDG_RUNTIME_DIR env is not set in ubuntu when node-agent is used
@@ -287,22 +300,50 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-7994] [Platform]Instance types available for a particular region are not being filtered
 * [PLAT-7995] No default provider selected while creating a universe
 * [PLAT-8006] Fix issue in fetching platform logs on clicking any of the task from the tasks tab
+* [PLAT-8013] [YCQL] health check fail for openshift environment
+* [PLAT-8013] Fix YCQL auth enabled health check
 * [PLAT-8013] YCQL health check failing
 * [PLAT-8024] prometheus service not enabled via systemd
 * [PLAT-8027] Migration fix done for YBM.
 * [PLAT-8040] Fixing yba-installer startup sync
 * [PLAT-8041] yba installer upgrade not finding installed version
+* [PLAT-8041] yba installer upgrade not finding installed version
 * [PLAT-8044] Fix an issue where ybc container is not brought up during universe shrink operation
 * [PLAT-8052] [UI] Encryption at Rest Dropdown should show details about which KMS Provider it belongs to similar to Provider dropdown
 * [PLAT-8055] Fixing the placement per AZ in a multi-az k8s cluster
+* [PLAT-8077] [xCluster] Failing IsBootstrapRequired api should not show restart is required
 * [PLAT-8154] yba re-install now works if postgres data left
 * [PLAT-8189] Fix YBA UI availability zone config reset logic
+* [PLAT-8193] k8s Provider edit UTs fix
 * [PLAT-8196] [PLAT-8197] Add missing form values to mutate on prem provider payload
+* [PLAT-8206] Cgroups not set when systemd is disabled
+* [PLAT-8220] [Incremental backups] UI not sending correct request to backend for YCQL table level incremental backups
+* [PLAT-8220] [Incremental backups]UI not sending correct request to backend for YCQL table level incremental backups
+* [PLAT-8224] Fix html rendering in email body
+* [PLAT-8273] [PLAT-8278] Handle undefined provider values and fix edit Azure provider form reset
+* [PLAT-8277] Fix /regions API slowness
+* [PLAT-8291] Resize read replica would not get correct cgroups
+* [PLAT-8300] Fix Incorrect total storage shown in Universe Overview page
+* [PLAT-8306] Universe locked at parent task is trying to lock it again at the subtask. Fix build failure
+* [PLAT-8320] Fixed the regex to handle the duplicate CPU metrics
+* [PLAT-8349] Edit volume size is causing pods to be deleted in multi-az
+* [PLAT-8378] Remove YB_BACKUP_SCRIPT condition from YSQL database overwrite check
+* [PLAT-8382] Fix retry API to return the submitted task UUID.
+* [PLAT-8384] Fix YCQL health check
+* [PLAT-8387] Scheduled backup configs are not displayed
+* [PLAT-8417] Do not return true from updateKubeConfig method when trying to set pull secret for k8s provider
+* [PLAT-8498] Incorrect throttle param values for K8s pods/dedicated nodes
+* [PLAT-8508] [PLAT-8063] [PLAT-8066] Helm upgrade failed with server.pem
+* [PLAT-8514] Helm install with user provided key and certificate.
+* [PLAT-8516] Backups not getting cleared after retention is complete
+* [PLAT-8536] Revert isReachable check for multiple tserver addresses
+* [PLAT] Current state of a stopped node is "Unreachable"
 syncFileData UT failure fix
 
 ### Known issues
 
 N/A
+
 ## v2.17.2.0 - March 27, 2023 {#v2.17.2.0}
 
 **Build:** `2.17.2.0-b216`
