removed duplicates and docs

--- a/docs/content/preview/releases/release-notes/v2.17.md
+++ b/docs/content/preview/releases/release-notes/v2.17.md
@@ -61,8 +61,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b152
 ### New Features
 
 * [[7836](https://github.com/yugabyte/yugabyte-db/issues/7836)] [YSQL] Batching IN queries on Hash Keys
-* [[12417](https://github.com/yugabyte/yugabyte-db/issues/12417)] [YSQL] Make PITR code aware of per-database catalog version mode
-* [[12417](https://github.com/yugabyte/yugabyte-db/issues/12417)] [YSQL] Use prefetched catalog version of MyDatabaseId
+* [[12417](https://github.com/yugabyte/yugabyte-db/issues/12417)] [YSQL] Make PITR code aware of per-database catalog version mode, use prefetched catalog version of MyDatabaseId
 * [[13535](https://github.com/yugabyte/yugabyte-db/issues/13535)] [xCluster] Add ability to pause and resume replication from the source cluster
 * [[13568](https://github.com/yugabyte/yugabyte-db/issues/13568)] [YSQL] Import 'Add pg_backend_memory_contexts system view'
 * [[13578](https://github.com/yugabyte/yugabyte-db/issues/13578)] [DocDB] Push commit/abort signals from transaction participant to wait queue
@@ -187,10 +186,8 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b152
 * API modifications to allow consumption by Terraform
 * Changing Null Check for pullsecretfile
 * Easy Deployment of K8s cluster, changes to rbac rules.
-* Make diagrams clickable (#16437)
 * Refresh AWS pricing information
 * Set up chrony correctly during AMI build process
-* Show image in popup on click (#16297)
 
 ### Bug fixes
 
@@ -238,7 +235,6 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b152
 * [DB-4393] [[15210](https://github.com/yugabyte/yugabyte-db/issues/15210)] YBClient fails to connect if the tserver advertises multiple hosts/ports
 * [DB-5855] xCluster Configuration - Data Type Missing in the Type.Java List
 * Adding missing values to UI for prefill kubeconfig
-* fix entry for dr0pdb (#16352)
 * Fix for shellcheck failures caused due to D22071
 * Fix Proxy Suffix for Listing Master/TServer UI Links
 * Fix swaggerGen
